src/objects/Batch_Data_Entry_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Batch Data Entry Settings</label>
    <fields>
        <fullName>Allow_Blank_Opportunity_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, then Batch Data Entry will never name Opportunities, even if they are blank (not included on the BDE page).</description>
        <inlineHelpText>If set, then Batch Data Entry will never name Opportunities, even if they are blank (not included on the BDE page).</inlineHelpText>
        <label>Allow Blank Opportunity Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting automatically generates the record name for batch entered Opportunity records based on the value of the entered fields.</inlineHelpText>
        <label>Opportunity Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewed_Retirement_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed Retirement Alert</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>